--- a/pom.xml
+++ b/pom.xml
@@ -25,134 +25,58 @@
   <issueManagement>
   	<url>https://github.com/37coins/clx-java/issues</url>
   </issueManagement>
-  <build>
-    <pluginManagement>
-      <plugins>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-surefire-plugin</artifactId>
-		  <version>2.10</version>
-		</plugin>
-      </plugins>
-    </pluginManagement>
-    <resources>
-      <resource>
-		<directory>src/main/resources</directory>
-		<filtering>true</filtering>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<version>2.2.2</version>
-		<configuration>
-		  <descriptorRefs>
-			<descriptorRef>jar-with-dependencies</descriptorRef>
-		  </descriptorRefs>
-		</configuration>
-		<executions>
-		  <execution>
-			<id>make-assembly</id> 
-			<phase>package</phase>
-			<goals>
-			  <goal>single</goal>
-			</goals>
-		  </execution>
-		</executions>
-      </plugin>
-      <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>2.0.2</version>
-		<configuration>
-		  <source>1.6</source>
-		  <target>1.6</target>
-		  <encoding>UTF-8</encoding>
-		</configuration>
-      </plugin>
-      <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>2.8</version>
-      </plugin>
-      <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-source-plugin</artifactId>
-		<version>2.1.2</version>
-		<executions>
-		  <execution>
-			<id>attach-sources</id>
-			<phase>verify</phase>
-			<goals>
-			  <goal>jar-no-fork</goal>
-			</goals>
-		  </execution>
-		</executions>
-      </plugin>
-      <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-resources-plugin</artifactId>
-		<version>2.5</version>
-		<configuration>
-		  <encoding>UTF-8</encoding>
-		</configuration>
-      </plugin>
-      <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<version>2.3.2</version>
-		<executions>
-		  <execution>
-			<goals>
-			  <goal>test-jar</goal>
-			</goals>
-		  </execution>
-		</executions>
-      </plugin>
-	  <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-		<version>1.4</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-	  </plugin>
-    </plugins>
-  </build>
-  <properties>
-  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  </properties>
-  <dependencyManagement>
-  	<dependencies>
-  	  <dependency>
-  		<groupId>common-codec</groupId>
-  		<artifactId>common-codec</artifactId>
-  		<version>1.3</version>
-  	  </dependency>
-  	</dependencies>
-  </dependencyManagement>
   <dependencies>
-  	<dependency>
-  	  <groupId>org.apache.httpcomponents</groupId>
-  	  <artifactId>httpclient</artifactId>
-  	  <version>4.2.1</version>
-  	</dependency>
-  	<dependency>
-  	  <groupId>com.google.code.gson</groupId>
-  	  <artifactId>gson</artifactId>
-  	  <version>2.2.2</version>
-  	</dependency>
-  </dependencies>
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.3.3</version>
+      </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>       
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.3.2</version>
+        </dependency>
+    </dependencies>
+
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
+    <distributionManagement>
+    <repository>
+      <id>37coins.myMavenRepo.write</id>
+      <url>http://repo.mymavenrepo.com/8HyTMtil2kKL4arfqWnf/</url>
+    </repository>
+  </distributionManagement>
 </project>
