--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.37coins</groupId>
 	<artifactId>clx-java</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>clx-java</name>
 	<description>Java helper library for CLX services</description>
 	<url>https://github.com/37coin/clx-java</url>
